# verus-staking-pool

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  README.md  docker-compose.yml  heartbeat.sh.example  sqlx-data.json
.sqlx/: query-03c434ca02a41d177242a3257ec33201ba1fbdc59d81ac0ce03fa92ed57bace9.json  query-083ea866a75dbb57350829e59349d70ea2798b6e6571c1d58e32fe1b7a9ee163.json  query-11132ce068a3289332c6be267ff3bd23575efc4d9c58586aa96796e97e5c0bd5.json  query-250af2d554a011b0a7db8af126c63a4a59c72ae3ed8f2b4ffbd0483c434f492a.json  query-34a24b4b76d9ed4f7de0c731a08288bf81071a0d2ee9f8d37cb904652e24e793.json  query-49f079ba7c50a652fbc1d5fb35bf3930bf1d7d63f69564e9646fbf1286040ddc.json  query-5284f041e02f379cc58a774c5d5adba63d345ae712217e0782f22ca5789224cf.json  query-5f70585f089eaeaab66f8d6f0849f750c832cea87b91b7bb25e298b2e9cc764c.json  query-7dcb1ca4e3287c0025b66d0d8c7de4c04b765f931f91f59c9395855f416449c4.json  query-8aa1382c08144c5a3383f2f91171f5534321bba8cb92f6a800b602726371a7c0.json  query-9897b02a9f473557b0bee9110f5760e1b61cd0159df139ff1781e7dda1d09c20.json  query-b050c5ecca784893ef292f8a0413b1f0d360b30fcd387473922a6bcddd0db40b.json  query-b425f0b42dcac6d0fcdd56c1e1791f5d0cb76980857350c193d2ddeb882b6a85.json  query-ca92a36802d1e2135a89c2b4066198913b6afc49fe5bea34d1db10f15969f25b.json  query-d1a89a5434b416953b322ae28167e4c36543b6f2bf976575f7801bb861833399.json  query-d2a635ad4e2f14cc76a9948489e4277294ea23d61deb950ebf495ffaf5ef1832.json  query-d2b788caf56bf5a977fdf292e63c45f6b26cd241f482267c53c3f21e49d274cc.json  query-d3933eb36a2a43dcda81486dc9a799c79db1854e66273fc4502267dceed29147.json  query-e4680d6ba80c7b778a6582c87ff14f6feece7b9d6e2a13c8bb0225d31144ca00.json  query-ec059a3fda1b7b3efbb8e3db46fdd6cea4409ba27afade856c49031f91b71097.json  query-ed167d4a508a609d82474122dd9636a913fdbf0b09ad0354f7308ac17a17816a.json  query-efb9b5e11a275b52e784a6e0500c53b3eabfb598bf133ef3f122fc12ad62320d.json  query-fa3a057542567994f68dddc993d6d3cdda3c0f4815421b20d6380ddf5a34970f.json
coin_config/: vrsctest.toml.example
coin_config.examples/: vrsc.toml  vrsctest.toml
config/: base.json.example
config.examples/: base.toml  local.toml
lib/: Cargo.toml
lib/src/: chain.rs  configuration.rs  database.rs  lib.rs  payout.rs
lib/src/fixtures/: latest_state.sql  payout_members.sql  stakes.sql  subscriptions.sql  transactions.sql  work.sql
migrations/: 20230216082601_create_pending_txns_table.sql  20230222102847_create_work_table.sql  20230301115926_subscriptions_table.sql  20230301142122_update_subscriptions_table.sql  20230302132103_add_discord_user_id.sql  20230303103129_create_transactions_table.sql  20230303103135_create_payout_table.sql  20230303143340_alter_work_table.sql  20230303144643_alter_tables_with_timestamps.sql  20230303154405_alter_subscriptions_with_currencyidhex.sql  (+18 more)
pool/: Cargo.toml
pool/sql/: store_last_state.sql  store_payout.sql  store_payout_member.sql  store_stake.sql  store_staker.sql  store_work.sql
pool/sql/migrations/: 20240430184514_bootstrap.sql
pool/src/: coinstaker.rs  config.rs  configuration.rs  lib.rs  main.rs  payoutmanager.rs
pool/src/app/: mod.rs
pool/src/coinstaker/: coinstaker.rs  config.rs  constants.rs  error.rs  http.rs  mod.rs  nats.rs  test_util.rs  util.rs  zmq.rs
pool/src/controller/: controller.rs
pool/src/database/: constants.rs  mod.rs  query.rs
pool/src/http/: constants.rs  mod.rs  routing.rs  service.rs
pool/src/http/handler/: app.rs  blockchain.rs  error.rs  mod.rs  payout.rs  stake.rs  staker.rs
pool/src/payout/: mod.rs  payout.rs  service.rs  worker.rs
pool/src/payout/fixtures/: stakes.sql
pool/src/payout_service/: mod.rs  payout.rs  service.rs
pool/src/payout_service/fixtures/: payout_members.sql  stakers.sql
pool/src/payoutmanager/: mod.rs
pool/src/util/: mod.rs  verus.rs
pool/tests/: integration.rs
(+1 files in other folders)
