[package]
name = "poollib"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
uuid = { features = ["v4"], version = "1.3.0" }
serde = "1"
rust_decimal = "1.28.1"
tokio = { features = ["rt", "macros"], version = "1.25.0" }
serde_derive = "1"
rmp-serde = "1.1"
rmpv = "1.0.0"
# vrsc-rpc = { version = "0.1.9" }
vrsc-rpc = { path = "../../rust-vrsc-rpc/client" }
color-eyre = "0.6.1"
# poise = { version = "0.5.2" }
config = { version = "0.13", default-features = false, features = ["toml"] }
serde-aux = "4.0.0"
tracing = "0.1.26"


[dependencies.sqlx]
default-features = false
features = [
    "postgres",
    "macros",
    "decimal",
    "migrate",
    "uuid",
    "offline",
    "chrono",
    "runtime-tokio-rustls",
]
version = "0.6"

[dev-dependencies]
tracing-test = "0.2.4"
