[package]
name = "pool"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[[bin]]
name = "verus-staking-pool"
path = "src/bin/main.rs"

[features]
mock = []

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
config = { version = "0.14.0", default-features = false, features = [
    "json",
    "toml",
] }
reqwest = "0.12.4"
rust_decimal = "1.35.0"
secrecy = { version = "0.8", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
vrsc-rpc = { path = "../../rust-vrsc-rpc/client" }
futures-util = "0.3.30"

axum = { version = "0.7.5", features = ["tracing", "macros"] }
axum-extra = { version = "0.9.3", features = ["query"] }
tower-http = { version = "0.5.2", features = ["trace", "catch-panic"] }

tokio = { features = ["rt", "macros", "rt-multi-thread"], version = "1.37.0" }
tokio-graceful-shutdown = "0.15.0"

tmq = { version = "0.4.0" }
zmq = { version = "0.10.0" }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde-aux = "4.0.0"


poollib = { path = "../lib" }

[dependencies.sqlx]
default-features = false
features = [
    "postgres",
    "macros",
    "rust_decimal",
    "migrate",
    "uuid",
    "chrono",
    "runtime-tokio-rustls",
]
version = "0.7.4"
